Update and rename front.html to index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
         >
           <a
-            href="front.html"
+            href="index.html"
             class="d-flex align-items-left mb-2 mb-lg-0 text-dark text-decoration-none"
           >
             <img alt="Qries" src="/225-2250040_creative-market-logo-png-transparent-png-removebg-preview.png"
@@ -50,10 +50,10 @@
             </button>
           </form>
           <div class="text-end">
-            <a href="/sign_in.html" type="button" class="btn btn-outline me-2"
+            <a href="sign_in.html" type="button" class="btn btn-outline me-2"
               >Login</a
             >
-            <a href="/signup.html" type="button" class="btn btn">Sign-up</a>
+            <a href="signup.html" type="button" class="btn btn">Sign-up</a>
           </div>
 
           <div class="dropdown text-end">
@@ -72,7 +72,7 @@
               />
             </a>
             <ul class="dropdown-menu text-small">
-              <li><a class="dropdown-item" href="/Profile.html">Profile</a></li>
+              <li><a class="dropdown-item" href="Profile.html">Profile</a></li>
               <li><a class="dropdown-item" href="#"></a></li>
               <li><a class="dropdown-item" href="#"></a></li>
               <li><hr class="dropdown-divider" /></li>
@@ -107,7 +107,7 @@
 
           <div class="row">
             <div class="col-md">
-              <a id="cater_product" class="dropdown-item" href="/producer.html">Fruits</a>
+              <a id="cater_product" class="dropdown-item" href="producer.html">Fruits</a>
               <a id="cater_product" class="dropdown-item" href="">link text</a>
               <a id="cater_product" class="dropdown-item" href="">link text</a>
               <a id="cater_product" class="dropdown-item" href="">link text</a>
