--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="container-sm Explore">
         We have Dream to connect To all the customer
       </div>
-      <a id="button" class="btn btn-success" href="#" role="button">Explore</a>
+      <a id="button" class="btn btn-success" href="#Magin_even_24" role="button">Explore</a>
       <div
         id=" carouselExampleControls"
         class="carousel slide Best_seller_carousel"
